--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,8 @@
     <meta content="IE=edge" http-equiv="X-UA-Compatible">
     <meta content="text/html; charset=UTF-8" http-equiv="Content-Type">
     <meta content="width=device-width,initial-scale=1" name="viewport">
+    <link rel="stylesheet" href="./style/reset.scss">
+    <link rel="stylesheet" href="./style/app.scss">
     <title>Sample</title>
   </head>
   <body>
