--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,6 @@
     <title>Sample</title>
   </head>
   <body>
-    <script src="./js/index.js"></script>
+    <script type="module" src="./js/index.js"></script>
   </body>
 </html>
